fixed the overlapping context layers by using save and restore method.

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,10 @@
    width: 50%;
    margin:0 auto;
 }
+/*
+.button{
+    width:60px;
+    height: auto;
+    background-color: blue;
+}
+*/
